# private-dashboard

./: .gitignore  DESIGN.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AlertHistory.jsx  MetricDetail.jsx  Sparkline.jsx  StatCard.jsx
sdk/python/: README.md  dashboard.py  pyproject.toml  test_sdk.py
src/: db.rs  main.rs  models.rs  routes.rs
tests/: api_tests.rs
