[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hnr-dashboard"
version = "0.1.0"
description = "Python SDK for Private Dashboard — agent operations metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Humans Not Required"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Humans-Not-Required/private-dashboard"
Repository = "https://github.com/Humans-Not-Required/private-dashboard"
Documentation = "https://github.com/Humans-Not-Required/private-dashboard/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["dashboard"]
